# IqCar

./: IQ_car.py  README.md  car.py  gameboard.py  pyproject.toml  requirements.lock.txt  requirements.txt  runTests.py  statistics.csv
docs/: README.md
iqcar/: IQ_car.py  car.py  gameboard.py  image_parsing.py  main.py  solver.py  tests.py
tests/: test_solver.py
