[tool.poetry]
name = "iqcar"
version = "0.1.0"
description = "Real-time IRL IQCar (aka \"Rush Hour\") solver"
authors = ["Jack Stanek <jrstanek@wisc.edu>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {version="^1.10.1", extras=["all"]}
pytest = "^8.1.1"
pylsp-mypy = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
